--- a/packages/browser-sdk/src/toolbar/Toolbar.css
+++ b/packages/browser-sdk/src/toolbar/Toolbar.css
@@ -103,7 +103,7 @@
     0 0 0 1px var(--border-color);
   border-radius: 7px;
   z-index: 999999;
-  min-width: 220px;
+  min-width: 240px;
   padding: 0;
 
   --visible-flags: 15;
@@ -127,6 +127,7 @@
 
   &::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
   }
   &::-webkit-scrollbar-track {
     background: transparent;
