--- a/packages/browser-sdk/src/ui/Dialog.css
+++ b/packages/browser-sdk/src/ui/Dialog.css
@@ -125,5 +125,6 @@
 }
 
 .dialog-content {
+  position: relative;
   padding: 7px 12px;
 }
